--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "mocha --exit",
     "start": "node index.js"
   },
+  "engines": {
+    "node" : "12.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
