(refactor) updated rules in eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
       "ecmaVersion": 10
   },
   "rules": {
-      "no-param-reassign": 0
+      "no-param-reassign": 0,
+      "array-callback-return": 0,
+      "consistent-return": 0
   }
 }
